--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nohup node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "eslint . --fix"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.19.0"
   }
 }
